--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav class="container-header">
           <ul class="font-header">            
             <li><a class="nav-link" href="#home">HOME</a></li>
-            <li><a class="nav-link" href="#about">ABOUT US</a></li>
-            <li><a class="nav-link" href="#menu">MENU</a></li>
-            <li><a class="nav-link" href="#gallery">GALLERY</a></li>
-            <li><a class="nav-link" href="#contact">CONTACT US</a></li>
+            <li><a class="nav-link" href="about.html">ABOUT US</a></li>
+            <li><a class="nav-link" href="menu.html">MENU</a></li>
+            <li><a class="nav-link" href="gallery.html">GALLERY</a></li>
+            <li><a class="nav-link" href="contact.html">CONTACT US</a></li>
           </ul>
         </nav>
         <img src="assets/img/logo.png" alt="Logo" class="logo" />
@@ -46,7 +46,7 @@
               terasa nikmat untuk dinikmati.
             </p>
             <div class="icon">
-              <a href="home.html">
+              <a href="#about">
                 <img src="assets/icon/ICONNN-03.png"
                 width="100px"
                 alt="Icon Information"/>
@@ -59,7 +59,9 @@
  
     <div class="about" id="about">
       <div class="content">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        <a href="#home">
+          <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        </a>
         <div class="container-main-about">
           <div class="text-container-main-about">
             <h1>
@@ -84,7 +86,7 @@
               yang manis membuat setiap meminumnya terasamenyegarkan.
             </p>
             <div class="icon">
-              <a href="about.html">
+              <a href="#menu">
                 <img
                 src="assets/icon/ICONNN-05.png"
                 width="100px"
@@ -99,7 +101,9 @@
  
     <div class="menu" id="menu">
       <div class="content">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        <a href="#about">
+          <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        </a>
       </div>
     </div>
     <div class="container-main-menu">
@@ -131,7 +135,7 @@
         </div>
 
         <div class="icon">
-          <a href="menu.html">
+          <a href="#gallery">
             <img
             src="assets/icon/ICONNN-02.png"
             width="100px"
@@ -144,7 +148,9 @@
 
     <div class="gallery" id="gallery">
       <div class="content">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        <a href="#menu">
+          <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        </a>
         <div class="container-main-gallery">
           <div class="text-container-main-gallery">
             <h1>
@@ -223,7 +229,7 @@
           </div>
 
           <div class="icon">
-            <a href="gallery.html">
+            <a href="#contact">
               <img
               src="assets/icon/ICONNN-04.png"
               width="100px"
@@ -239,7 +245,9 @@
 
     <div class="contact" id="contact">
       <div class="content">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        <a href="#home">
+          <img src="assets/img/logo.png" alt="Logo" class="logo" />
+        </a>
         <div class="container-main-contact">
           <div class="text-container-main-contact">
             <h1>
